Aplicar cambios en imagenes y textos

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<header>
 				<h2>¡Bienvenid@ a tu futuro <strong>hogar</strong>!</h2>
 				<p>
-					Apartamentos en primero y segundo nivel con acceso privado, 2 ambientes, baño, y amueblado parcial.
+					Apartamentos de primer nivel, dos ambientes, baño privado, y estacionamiento frente al complejo.
 				</p>
 			</header>
 		</section>
@@ -84,33 +84,33 @@
 			<div class="reel">
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic01.jpg" id="myImg" onclick="modal(this)" alt="Area de comedor/cocina Commodo" /></a>
+					<a class="image featured"><img src="images/pic01.jpg" id="myImg" onclick="modal(this)" alt="Area de comedor/cocina cómodo" /></a>
 					<header>
-						<h3><a>Area de comedor/cocina Commodo </a></h3>
+						<h3><a>Area de comedor/cocina cómodo </a></h3>
 					</header>
-					<p>Modernos acabados de cemento liso</p>
+					<p>Modernos acabados</p>
 
 				</div>
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic02.jpg" id="myImg" onclick="modal(this)" alt="Vista a la 16 avenida" /></a>
+					<a class="image featured"><img src="images/pic02.jpg" id="myImg" onclick="modal(this)" alt="Dormitorio" /></a>
 					<header>
-						<h3><a>Vista a la 16 avenida</a></h3>
+						<h3><a>Amplio dormitorio</a></h3>
 						<br>
 					</header>
-					<p>Vista desde el segundo nivel hacia la 16av.</p>
+					<p>Amplio dormitorio</p>
 				</div>
 
 				<div class="article">
 					<a class="image featured"><img src="images/pic03.jpg" id="myImg" onclick="modal(this)" alt="Amueblado parcial" /></a>
 					<header>
-						<h3><a>Amueblado parcial</a></h3>
+						<h3><a>Otra vista de la cocina</a></h3>
 					</header>
-					<p>Amueblado parcial en todos los apartamentos</p>
+					<p>Otra vista de la cocina</p>
 				</div>
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic04.jpg" id="myImg" onclick="modal(this)" alt="Parqueo enfrente" /></a>
+					<a class="image featured"><img src="images/pic05.jpg" id="myImg" onclick="modal(this)" alt="Parqueo enfrente" /></a>
 					<header>
 						<h3><a>Parqueo enfrente</a></h3>
 					</header>
@@ -118,7 +118,7 @@
 				</div>
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic05.jpg" id="myImg" onclick="modal(this)" alt="Lavamanos moderno" /></a>
+					<a class="image featured"><img src="images/pic04.jpg" id="myImg" onclick="modal(this)" alt="Lavamanos moderno" /></a>
 					<header>
 						<h3><a>Lavamanos moderno</a></h3>
 					</header>
@@ -136,46 +136,46 @@
 				<div class="article">
 					<a class="image featured"><img src="images/pic07.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 					<header>
-						<h3><a>Comedor cocina del 201</a></h3>
+						<h3><a>Otros accesorios del tocador</a></h3>
 					</header>
-					<p>Area de cocina y comedor</p>
+					<p>Otros accesorios del tocador</p>
 				</div>
 
 				<div class="article">
 					<a class="image featured"><img src="images/pic08.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
 					<header>
-						<h3><a>Acceso 2do Nivel</a></h3>
+						<h3><a>Lava platos</a></h3>
 					</header>
-					<p>Cuenta con doble puerta de ingreso.</p>
+					<p>Lavaplatos con acabados modernos de cemento liso</p>
 				</div>
 
 				<div class="article">
 					<a class="image featured"><img src="images/pic09.jpg" id="myImg" onclick="modal(this)" alt="Vista a la 16 avenida" /></a>
 					<header>
-						<h3><a>Vista a la 16 avenida</a></h3>
+						<h3><a>Vista a la decima avenida</a></h3>
 					</header>
-					<p>Ventanal hacia 16 avenida</p>
+					<p>Vista a la calle</p>
 				</div>
 				<div class="article">
 					<a class="image featured"><img src="images/pic10.jpg" id="myImg" onclick="modal(this)" alt="Dos ambientes" /></a>
 					<header>
-						<h3><a>Dos ambientes</a></h3>
+						<h3><a>Cocina/comedor</a></h3>
 					</header>
-					<p>Vista de los dos ambientes de cada apartamento</p>
+					<p>Vista de la cocina/comedor</p>
 				</div>
 				<div class="article">
 					<a class="image featured"><img src="images/pic11.jpg" id="myImg" onclick="modal(this)" alt="Cocina" /></a>
 					<header>
-						<h3><a>Cocina</a></h3>
+						<h3><a>Calzada Roosevelt</a></h3>
 					</header>
-					<p>Area diseñada para los utencilios y electrodomesticos de cocina</p>
+					<p>Salida hacia la calzada Roosevelt</p>
 				</div>
 				<div class="article">
 					<a class="image featured"><img src="images/pic12.jpg" id="myImg" onclick="modal(this)" alt="Dormitorio" /></a>
 					<header>
-						<h3><a>Dormitorio</a></h3>
+						<h3><a>Vista hacia la 10av.</a></h3>
 					</header>
-					<p>Dormitorio con amueblado parcial</p>
+					<p>Vista hacia la décima avenida</p>
 				</div>
 			</div>
 		</section>
@@ -203,12 +203,8 @@
 							<div class="desc">Documentos de identificación personal</div>
 						</div>
 						<div class="service">
-							<div class="ico"><i class="fas fa-money-check-alt"></i></div>
-							<div class="desc">Deposito de <b>Q1,900.00</b></div>
-						</div>
-						<div class="service">
 							<div class="ico"><i class="far fa-money-bill-alt"></i></div>
-							<div class="desc">Renta por mes <b>Q1,900.00</b> + Luz + Mantenimiento(<b>Q150.00</b>)</div>
+							<div class="desc">Renta por mes desde <b>Q1,400.00</b> + Luz + Mantenimiento(<b>Q150.00</b>)</div>
 						</div>
 
 						<div class="service">
@@ -284,14 +280,13 @@
 		<div id="ubication" class="wrapper style2">
 			<section id="features" class="container special">
 				<a href="#" class="image featured">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15442.650821524017!2d-90.5492467!3d14.6182804!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf1daae7b6da19e88!2sApartamentos+Carabanchel+573!5e0!3m2!1ses!2sgt!4v1542049871146"
-					 width="100%" height="551" frameborder="0" onclick="modalMap(this)"> </iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d965.0942526971124!2d-90.5780193708178!3d14.634527799361308!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTTCsDM4JzA0LjMiTiA5MMKwMzQnMzguOSJX!5e0!3m2!1ses!2sgt!4v1564470993628!5m2!1ses!2sgt" width="100%" height="551" frameborder="0" onclick="modalMap(this)"> </iframe>
 				</a>
 
 				<header>
 					<h2><a href="https://goo.gl/maps/24VvrWsxPc62" target="_blank">Ubicación</a></h2>
-					<p>16 avenida 5-73 Zona 11, Ciudad Guatemala</p>
-					<p>Con acceso por la calzada Roosvelt, calzada Aguilar Batres, y el Anillo Periférico</p>
+					<p>10 avenida, Zona 3 de Mixco, Guatemala</p>
+					<p>Con acceso por la calzada Roosvelt y Calzada Mateo Flores</p>
 				</header>
 			</section>
 		</div>
@@ -307,19 +302,18 @@
 				</header>
 				<div class="row">
 					<article class="col-4 col-12-mobile special">
-						<a class="image featured"><img src="images/cum.jpg" id="myImg" onclick="modal(this)" alt="Cerca del Centro Meropolitando Universitario" /></a>
+						<a class="image featured"><img src="images/epa.jpg" id="myImg" onclick="modal(this)" alt="Cerca del centro comercial Plaza Madero/EPA" /></a>
 						<header>
-							<h3><a>Centro Metropolitando Universitario</a></h3>
+							<h3><a>C. C. Plaza Madero/EPA</a></h3>
 						</header>
 						<p>
-							A pocos metros del Centro Metropolitano Universitario(CUM) de la Universidad San Carlos, ideal para estudiantes
-							de Psicología y Medicina.
+							A pocos metros del Centro Comercial Plaza Madero y Ferretería EPA.
 						</p>
 					</article>
 					<article class="col-4 col-12-mobile special">
-						<a class="image featured"><img src="images/mira.jpg" id="myImg" onclick="modal(this)" alt="A pocos metros del C. C. Miraflores" /></a>
+						<a class="image featured"><img src="images/eskala.jpg" id="myImg" onclick="modal(this)" alt="A pocos metros del C. C. ESKALA" /></a>
 						<header>
-							<h3><a>C. C. Miraflores</a></h3>
+							<h3><a>C. C. ESKALA</a></h3>
 						</header>
 						<p>
 							Con más de 300 opciones de compra, una oferta gastronómica para todos los gustos, desde comida rápida hasta
@@ -327,14 +321,12 @@
 						</p>
 					</article>
 					<article class="col-4 col-12-mobile special">
-						<a class="image featured"><img src="images/trans.jpg" id="myImg" onclick="modal(this)" alt="Con acceso al transporte publico Transmetro" /></a>
+						<a class="image featured"><img src="images/frater.jpg" id="myImg" onclick="modal(this)" alt="A las cercanías de la Fraternidad Cristiana" /></a>
 						<header>
-							<h3><a>Transmetro</a></h3>
+							<h3><a>Fraternidad Cristiana</a></h3>
 						</header>
 						<p>
-							El Transmetro es un sistema de transporte público de tipo autobús de tránsito rápido. Puedes tomarlo en la
-							parada
-							Mariscal ubicada en la calzada Aguilar Batres y próximamente en el Anillo Periferico.
+							Dos edificios educativos de 4 niveles cada uno, que son utilizados por el Liceo Bilingüe Fraternidad Cristiana de Lunes a Viernes enseñando a niños desde maternal hasta 5to. Bachillerato completamente Bilingüe (Inglés-Español), además brinda Educación Especializada en Computació...
 						</p>
 					</article>
 				</div>
@@ -345,7 +337,7 @@
 		<!-- Aplication -->
 		<div id="aplication" class="wrapper style2">
 			<section id="features" class="container special">
-				<a class="image featured" title="Atardecer desde Apartamentos Roosevelt...">
+				<a class="image featured" title="Ciudad capital...">
 					<img src="images/aplicar.jpg" width="100%" height="auto">
 				</a>
 
