Correcciones en alt

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				</div>
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic03.jpg" id="myImg" onclick="modal(this)" alt="Amueblado parcial" /></a>
+					<a class="image featured"><img src="images/pic03.jpg" id="myImg" onclick="modal(this)" alt="Otra vista de la cocina" /></a>
 					<header>
 						<h3><a>Otra vista de la cocina</a></h3>
 					</header>
@@ -134,7 +134,7 @@
 				</div>
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic07.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
+					<a class="image featured"><img src="images/pic07.jpg" id="myImg" onclick="modal(this)" alt="Otros accesorios del tocador" /></a>
 					<header>
 						<h3><a>Otros accesorios del tocador</a></h3>
 					</header>
@@ -142,7 +142,7 @@
 				</div>
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic08.jpg" id="myImg" onclick="modal(this)" alt="" /></a>
+					<a class="image featured"><img src="images/pic08.jpg" id="myImg" onclick="modal(this)" alt="Lava platos" /></a>
 					<header>
 						<h3><a>Lava platos</a></h3>
 					</header>
@@ -150,28 +150,28 @@
 				</div>
 
 				<div class="article">
-					<a class="image featured"><img src="images/pic09.jpg" id="myImg" onclick="modal(this)" alt="Vista a la 16 avenida" /></a>
+					<a class="image featured"><img src="images/pic09.jpg" id="myImg" onclick="modal(this)" alt="Vista a la décima avenida" /></a>
 					<header>
-						<h3><a>Vista a la decima avenida</a></h3>
+						<h3><a>Vista a la décima avenida</a></h3>
 					</header>
 					<p>Vista a la calle</p>
 				</div>
 				<div class="article">
-					<a class="image featured"><img src="images/pic10.jpg" id="myImg" onclick="modal(this)" alt="Dos ambientes" /></a>
+					<a class="image featured"><img src="images/pic10.jpg" id="myImg" onclick="modal(this)" alt="Cocina/comedor" /></a>
 					<header>
 						<h3><a>Cocina/comedor</a></h3>
 					</header>
 					<p>Vista de la cocina/comedor</p>
 				</div>
 				<div class="article">
-					<a class="image featured"><img src="images/pic11.jpg" id="myImg" onclick="modal(this)" alt="Cocina" /></a>
+					<a class="image featured"><img src="images/pic11.jpg" id="myImg" onclick="modal(this)" alt="Calzada Roosevelt" /></a>
 					<header>
 						<h3><a>Calzada Roosevelt</a></h3>
 					</header>
 					<p>Salida hacia la calzada Roosevelt</p>
 				</div>
 				<div class="article">
-					<a class="image featured"><img src="images/pic12.jpg" id="myImg" onclick="modal(this)" alt="Dormitorio" /></a>
+					<a class="image featured"><img src="images/pic12.jpg" id="myImg" onclick="modal(this)" alt="Vista hacia la 10av." /></a>
 					<header>
 						<h3><a>Vista hacia la 10av.</a></h3>
 					</header>
